# python_sql_tools

./: .gitignore  LICENSE  Pipfile  README.md  app_config-sample.json  app_config-sample_table_name_cell.json  app_config-sample_table_name_sheet.json  db_config-sample.json  dbeaver_sample_database.a5er  doc_tables.xlsx  pyproject.toml
create_ddl/: __main__.py
create_dml/: __main__.py
create_dml_source_xlsx/: __main__.py
create_view_dependant_table_list/: __main__.py
doc/: app_config.md  create_ddl.md  create_dml.md  create_dml_source_xlsx.md  create_view_dependant_table_list.md  doc_tables.xlsx  execute_sql.md  export_dbunit_flatxml.md
execute_sql/: __main__.py
export_dbunit_flatxml/: __main__.py
sample/common/: dbeaver_sample_db_data_with_domain_data_type_without_nvarchar.xlsx
sample/db2/: dbeaver_sample_db_ibm_db2.a5er
sample/mysql/: dbeaver_sample_database_mysql.a5er  dbeaver_sample_db_mysql.a5er  dbeaver_sample_db_mysql_data.xlsx  dbeaver_sample_db_mysql_data_table_name_cell.xlsx  dbeaver_sample_db_mysql_data_table_name_sheet.xlsx  get_schema.sql  select_record_count_mysql.sql  truncate_tables_mysql.sql
sample/oracle/: dbeaver_sample_db_oracle.a5er  dbeaver_sample_db_oracle_data.xlsx  dbeaver_sample_db_oracle_data_table_name_sheet.xlsx
sample/postgres/: dbeaver_sample_db_postgres.a5er  dbeaver_sample_db_postgres_data.xlsx  select_record_count_postgres.sql
sample/sql_server/: dbeaver_sample_db_mssql.a5er  dbeaver_sample_db_mssql_data_table_name_sheet.xlsx  dbeaver_sample_db_sqlserver.a5er  dbeaver_sample_db_sqlserver_data.xlsx
(+148 files in other folders)
